<resources>
    <string name="app_name">数字农场</string>
    <string name="menu_map">地图模式</string>
    <string name="menu_list">列表模式</string>
    <string name="menu_grid">网格模式</string>
    <string name="menu_current">实时数据</string>
    <string name="menu_history">历史数据</string>
    <string name="loding">加载中...</string>
    <string name="select_start_time">请选择开始日期</string>
    <string name="select_end_time">请选择截止日期</string>
    <string name="start_time">起始日期</string>
    <string name="end_time">截止日期</string>
    <string name="companyNo">组织代码</string>
    <string name="userNo">用户名</string>
    <string name="pwd">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_in">登录</string>
    <string name="companyNo_null">组织代码不能为空!</string>
    <string name="userNo_null">用户名不能为空!</string>
    <string name="password_null">密码不能为空!</string>
    <string name="cancel">注销</string>
    <string name="check_update">检查更新</string>
    <string name="more">更多</string>
    <string name="mode">模式</string>
    <string name="video_login_faild">登录设备失败，请检查网络和设备信息！</string>
    <string name="video_init_faild">设备初始化失败，请检查设备信息！</string>
    <string name="loading">拼命加载...</string>
    <string name="no_data">无数据</string>
    <string name="err">未知错误</string>
    <string name="update_pwd">修改密码</string>
    <string name="modify_pwd">确认修改</string>
    <string name="info_null">信息不能为空！</string>
    <string name="pwd_no_yiy">新密码与原密码一致！</string>
    <string name="pwd_no">两次输入的密码不一致！</string>
    <string name="userPhone">手机号</string>
    <string name="action_search">设备名</string>
    <string name="login_process_tip">连接服务器...</string>
    <string name="login_failed">服务器连接失败,请重试</string>
    <string name="fetch_reslist_failed">获取基地信息失败,请重试</string>
    <string name="fetch_cameralist_failed">获取设备失败,请重试</string>
    <string name="playback_not_allot_record">该监控点没有配置录像计划</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="mmdd">M月d日</string>
    <string name="label_cancel">取消</string>
    <string name="title_select_time">选择日期</string>
    <string name="label_commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="label_region">地区设备</string>
    <string name="label_photo">照片</string>
    <string name="label_video">录像</string>
    <string name="label_photo_video">照片与录像</string>
    <string name="copyright">中乔大三农实业集团 版权所有</string>
    <string name="text_delete">删除</string>

</resources>
