<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/data_bg_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

      <include
          android:id="@+id/top"
          layout="@layout/top_title_layout"/>

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:text="气象趋势图"
                android:textColor="@color/line_title"
                android:textSize="@dimen/text_20" />

            <LinearLayout
                android:id="@+id/ll_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:src="@mipmap/icon_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_20"
                    android:text="@string/start_time"
                    android:textColor="@color/time_label"
                    android:textSize="@dimen/text_17" />

                <TextView
                    android:id="@+id/tv_select_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_20"
                    android:text="@string/select_start_time"
                    android:textColor="@color/time_minor"
                    android:textSize="@dimen/text_15" />

            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:background="@color/line__spit_color" />

            <LinearLayout
                android:id="@+id/ll_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/space_10">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_10"
                    android:src="@mipmap/icon_calendar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_20"
                    android:text="@string/end_time"
                    android:textColor="@color/time_label"
                    android:textSize="@dimen/text_17" />

                <TextView
                    android:id="@+id/tv_select_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_20"
                    android:text="@string/select_end_time"
                    android:textColor="@color/time_minor"
                    android:textSize="@dimen/text_15" />

            </LinearLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/ll_end"
                android:layout_marginBottom="@dimen/space_20"
                android:layout_marginLeft="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                android:background="@color/line__spit_color" />

            <LinearLayout
                android:id="@+id/ll_flag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/space_20"
                    android:layout_height="4dp"
                    android:background="@color/light_max" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginRight="@dimen/space_5"
                    android:text="最大值" />

                <View
                    android:layout_width="@dimen/space_20"
                    android:layout_height="4dp"
                    android:layout_marginLeft="@dimen/space_5"
                    android:background="@color/light_avg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5"
                    android:layout_marginRight="@dimen/space_5"
                    android:text="平均值" />

                <View
                    android:layout_width="@dimen/space_20"
                    android:layout_height="4dp"
                    android:layout_marginLeft="@dimen/space_5"
                    android:background="@color/light_min" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5"
                    android:text="最小值" />
            </LinearLayout>

            <com.linheimx.app.library.charts.LineChart
                android:id="@+id/line_view"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="invisible"
                android:layout_marginTop="@dimen/space_10"
                android:layout_marginRight="@dimen/space_10"
                />
        </LinearLayout>

        <include layout="@layout/no_data_layout" />

    </RelativeLayout>


</ScrollView>



